# Projeto-Consumindo-TwitterAPI-Python

./: README.md  main.py  pyproject.toml
src/: connection.py  secrets.py  services.py
