[tool.poetry]
name = "twitter-api-test"
version = "1.0.0"
description = ""
authors = ["Márcio Fontes"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.1"
pymongo = "^3.12.0"
tweepy = "^3.10.0"
uvicorn = { extras = ["standard"], version = "^0.15.0" }

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^3.9.2"
black = "^21.8b0"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
